--- a/LogAn.Test/LogAn.Test.csproj
+++ b/LogAn.Test/LogAn.Test.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LogAnalyzerTests.cs" />
+    <Compile Include="MemCalculatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
